# ROS-project-MI

./: .gitignore  .gitmodules  README
catkin_ws/src/ros_joy/: CMakeLists.txt  package.xml
catkin_ws/src/ros_joy/launch/: core.launch
catkin_ws/src/ros_joy/src/: core.cpp
robot_ws/devel/: .catkin  .rosinstall  setup.sh
robot_ws/devel/include/rosaria/: BumperState.h
robot_ws/devel/lib/core/: core
robot_ws/devel/lib/joy_handler/: joy_handler
robot_ws/devel/lib/pkgconfig/: core.pc  joy_handler.pc  ros_cam.pc  rosaria.pc  usb_cam.pc
robot_ws/devel/lib/ros_cam/: subscriber1
robot_ws/devel/lib/rosaria/: RosAria
robot_ws/devel/lib/usb_cam/: usb_cam_node
robot_ws/devel/share/core/cmake/: coreConfig.cmake
robot_ws/devel/share/joy_handler/cmake/: joy_handlerConfig.cmake
robot_ws/devel/share/ros_cam/cmake/: ros_camConfig.cmake
robot_ws/devel/share/rosaria/cmake/: rosaria-msg-paths.cmake  rosariaConfig.cmake
robot_ws/devel/share/roseus/ros/rosaria/: manifest.l
robot_ws/devel/share/usb_cam/cmake/: usb_camConfig.cmake
robot_ws/launch/: core.launch  robot.launch
robot_ws/src/core/: CMakeLists.txt  package.xml
robot_ws/src/core/src/: core.cpp
robot_ws/src/joy_handler/: CMakeLists.txt
robot_ws/src/joy_handler/src/: joy_handler.cpp
robot_ws/src/ros_cam/: CMakeLists.txt  package.xml
robot_ws/src/ros_cam/src/: ros_cam.cpp  subscriber1.cpp
terminal_ws/: test.bag
terminal_ws/launch/: terminal.launch
terminal_ws/src/website/: Google-map.html  Google-maps.js  Ros-Web.html  home.css  home.html  menu.html
