<?xml version="1.0"?>
<package format="2">
  <name>ros_joy</name>
  <version>0.0.0</version>
  <description>The ros_joy package</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
